--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -7,386 +7,10 @@
 
 @import 'default';
 
-:root {
-  --color-dark-blue: #00313C;
-  --color-teal: #007681;
-  --color-orange: #D57800;
-  --color-dark-gray: #63666A;
-  --color-light-gray: #B1B3B3;
-  --color-white: #FFFFFF;
-}
-
-/* Default section styling */
-section {
-  width: 1280px;
-  height: 720px;
-  padding: 0;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: 18px;
-  color: var(--color-dark-gray);
-  background: var(--color-white);
-  line-height: 1.4;
-  text-align: justify;
-  
-  /* Default basic content slide styling */
-  background-image: linear-gradient(to bottom, var(--color-dark-blue) 0%, var(--color-dark-blue) 20%, var(--color-white) 20%, var(--color-white) 100%);
-  padding-top: 160px;
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-bottom: 60px;
-}
-
-/* Header logo positioning for basic content slides */
-section::before {
-  content: "";
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 120px;
-  height: 60px;
-  background-image: url('./images/LBNL-logo-horizontal.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: left center;
-}
-
-/* Page numbers */
-section::after {
-  content: attr(data-marpit-pagination);
-  position: absolute;
-  bottom: 20px;
-  right: 30px;
-  font-size: 14px;
-  color: var(--color-dark-gray);
-  z-index: 10;
-}
-
-/* Slide titles */
-section h1 {
-  position: absolute;
-  top: 30px;
-  left: 180px;
-  right: 30px;
-  color: var(--color-white);
-  font-size: 22px;
-  font-weight: bold;
-  margin: 0;
-  line-height: 60px;
-  text-align: left;
-}
-
-/* Content headers */
-section h2 {
-  font-size: 20px;
-  color: var(--color-dark-gray);
-  margin: 1em 0 0.5em 0;
-  font-weight: bold;
-}
-
-section h3 {
-  font-size: 18px;
-  color: var(--color-dark-gray);
-  margin: 0.8em 0 0.4em 0;
-  font-weight: bold;
-}
-
-/* Paragraph styling */
-section p {
-  margin: 0.5em 0;
-  text-align: justify;
-}
-
-/* List styling with orange square bullets */
-section ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 1em 0;
-}
-
-section ul li {
-  position: relative;
-  padding-left: 30px;
-  margin: 0.5em 0;
-  text-align: justify;
-}
-
-section ul li::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0.4em;
-  width: 12px;
-  height: 12px;
-  background-color: var(--color-orange);
-}
-
-section ul li strong {
-  font-weight: bold;
-}
-
-/* Links */
-section a {
-  color: var(--color-teal);
-  text-decoration: underline;
-}
-
-section a:hover {
-  color: var(--color-dark-blue);
-}
-
-/* Code blocks */
-section code {
-  font-family: 'Courier New', monospace;
-  background-color: #F5F5F5;
-  padding: 2px 4px;
-  border-radius: 3px;
-}
-
-section pre {
-  background-color: #F5F5F5;
-  padding: 15px;
-  border-radius: 5px;
-  overflow-x: auto;
-  margin: 1em 0;
-}
-
-section pre code {
-  background: none;
-  padding: 0;
-}
-
-/* Title slide styling */
-section.title {
-  background: linear-gradient(to right, var(--color-dark-blue) 25%, transparent 25%),
-              url('./images/nersc-building.jpg');
-  background-size: auto, cover;
-  background-position: left, right;
-  background-repeat: no-repeat, no-repeat;
-  padding: 0;
-  color: var(--color-white);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-}
-
-/* Berkeley Lab logo on title slide */
-section.title::before {
-  content: "";
-  position: absolute;
-  top: 80px;
-  left: 30px;
-  width: 150px;
-  height: 200px;
-  background-image: url('./images/LBNL-logo-vertical.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block !important;
-}
-
-/* Add NERSC logo via custom class since ::after is used for page numbers */
-section.title .nersc-logo {
-  position: absolute;
-  top: 300px;
-  left: 30px;
-  width: 150px;
-  height: 80px;
-  background-image: url('./images/nersc-logo.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-section.title h1 {
-  position: absolute;
-  top: 100px;
-  left: 25%;
-  right: 5%;
-  font-size: 48px;
-  font-weight: bold;
-  color: var(--color-white);
-  text-align: left;
-  line-height: 1.2;
-  margin: 0;
-}
-
-section.title h2 {
-  position: absolute;
-  top: 200px;
-  left: 25%;
-  right: 5%;
-  font-size: 36px;
-  font-weight: normal;
-  color: var(--color-white);
-  text-align: left;
-  line-height: 1.2;
-  margin: 0;
-}
-
-section.title h3 {
-  position: absolute;
-  top: 300px;
-  left: 25%;
-  right: 5%;
-  font-size: 24px;
-  font-weight: normal;
-  color: var(--color-white);
-  text-align: left;
-  margin: 0;
-}
-
-section.title .authors {
-  position: absolute;
-  bottom: 60px;
-  left: 25%;
-  right: 5%;
-  font-size: 16px;
-  color: var(--color-white);
-  text-align: left;
-  line-height: 1.3;
-}
-
-/* Section title slide */
-section.section-title {
-  background: linear-gradient(to right, var(--color-white) 25%, var(--color-dark-blue) 25%);
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-section.section-title::before {
-  display: none;
-}
-
-section.section-title h1 {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  right: 10%;
-  transform: translateY(-50%);
-  font-size: 48px;
-  font-weight: bold;
-  color: var(--color-orange);
-  text-align: left;
-  line-height: 1.2;
-  margin: 0;
-}
-
-section.section-title h2 {
-  position: absolute;
-  top: 60%;
-  left: 25%;
-  right: 10%;
-  font-size: 32px;
-  font-weight: normal;
-  color: var(--color-white);
-  text-align: left;
-  margin: 0;
-}
-
-/* Question slide */
-section.question {
-  background: var(--color-white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 60px;
-}
-
-section.question::before {
-  display: none;
-}
-
-section.question h1 {
-  position: static;
-  font-size: 72px;
-  font-weight: bold;
-  color: var(--color-dark-gray);
-  text-align: center;
-  margin: 0;
-  line-height: 1.2;
-}
-
-/* Thanks slide */
-section.thanks {
-  background: linear-gradient(to right, var(--color-white) 75%, var(--color-dark-blue) 75%);
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-section.thanks::before {
-  display: none;
-}
-
-section.thanks .content {
-  position: absolute;
-  left: 10%;
-  right: 35%;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-
-section.thanks h1 {
-  position: static;
-  font-size: 72px;
-  font-weight: bold;
-  color: var(--color-dark-gray);
-  margin: 0 0 40px 0;
-}
-
-section.thanks h2 {
-  font-size: 32px;
-  color: var(--color-teal);
-  margin: 20px 0;
-  font-weight: normal;
-}
-
-section.thanks p {
-  font-size: 24px;
-  color: var(--color-dark-gray);
-  margin: 20px 0;
-  text-align: center;
-}
-
-section.thanks a {
-  color: var(--color-teal);
-  text-decoration: underline;
-  font-size: 24px;
-}
-
-/* Hide page numbers on special slides */
-section.title::after,
-section.section-title::after,
-section.question::after,
-section.thanks::after {
-  display: none;
-}
-
-/* Reset positioning for special slides */
-section.title h1,
-section.section-title h1,
-section.question h1,
-section.thanks h1 {
-  top: auto;
-  left: auto;
-  right: auto;
-}
-
-/* Override default background for special slides */
-section.title,
-section.section-title,
-section.question,
-section.thanks {
-  background-image: none;
-  padding: 0;
-}
-
-/* Override default header logo for special slides (except title which needs Berkeley Lab logo) */
-section.section-title::before,
-section.question::before,
-section.thanks::before {
-  background-image: none;
-  display: none;
-}
+/* Import modular stylesheets for each slide type */
+@import 'base.css';
+@import 'content-slide.css';
+@import 'title-slide.css';
+@import 'section-title.css';
+@import 'question-slide.css';
+@import 'thanks-slide.css';
