--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -5,7 +5,7 @@
  * @size 16:9 1280px 720px
  */
 
-@import 'default';
+/* @import 'default'; */
 
 /* Import modular stylesheets for each slide type */
 @import 'base.css';
