--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -128,9 +128,9 @@ section::before {
 
 /* ========== Title Slide (class: title) ========== */
 section.title {
-  background: linear-gradient(to right, var(--color-dark-blue) 33.33%, transparent 33.33%), url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/nersc-building.jpg');
+  background: linear-gradient(to right, var(--color-dark-blue) 25%, transparent 25%), url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/nersc-building.jpg');
   background-size: auto, cover;
-  background-position: left, right;
+  background-position: left, left center;
   padding: 0;
   color: var(--color-white);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -141,7 +141,7 @@ section.title::before {
   content: "";
   position: absolute;
   top: 80px;
-  left: calc(33.33% / 2 - 75px);
+  left: calc(25% / 2 - 75px);
   width: 150px;
   height: 200px;
   background-image: url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/LBNL-logo-vertical.png');
@@ -154,7 +154,7 @@ section.title::after {
   content: "";
   position: absolute;
   top: 300px;
-  left: calc(33.33% / 2 - 75px);
+  left: calc(25% / 2 - 75px);
   width: 150px;
   height: 80px;
   background-image: url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/nersc-logo.png');
@@ -166,7 +166,7 @@ section.title h1,
 section.title h2,
 section.title h3 {
   position: absolute;
-  left: 38%;
+  left: 30%;
   right: 5%;
   text-align: left;
   margin: 0;
@@ -193,7 +193,7 @@ section.title h3 {
 section.title .authors {
   position: absolute;
   bottom: 60px;
-  left: 38%;
+  left: 30%;
   right: 5%;
   font-size: 16px;
   line-height: 1.3;
