fixed nersc logo vertical position

--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -153,7 +153,7 @@ section.title::before {
 section.title::after {
   content: "";
   position: absolute;
-  top: 300px;
+  bottom: 80px;
   left: calc(25% / 2 - 75px);
   width: 150px;
   height: 80px;
