--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -45,7 +45,7 @@ section::after {
   content: attr(data-marpit-pagination);
   position: absolute;
   bottom: 10px;
-  right: 40px;
+  right: 10px;
   font-size: 14px;
   color: var(--color-dark-gray);
 }
@@ -119,10 +119,9 @@ section h1 {
 section::before {
   content: "";
   position: absolute;
-  top: 30px;
+  bottom: 10px;
   left: 40px;
-  width: 120px;
-  height: 80px;
+  height: 160px;
   background-image: url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/LBNL-logo-horizontal.png');
   background-size: contain;
   background-repeat: no-repeat;
