--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -125,7 +125,7 @@ section {
 section h1 {
   position: absolute;
   top: 40px;
-  left: 220px;
+  left: 300px;
   right: 60px;
   color: var(--color-white);
   font-size: 44px;
@@ -138,10 +138,10 @@ section h1 {
 section::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: -50px;
   left: 40px;
-  height: 144px;
-  width: 160px;
+  height: 216px;
+  width: 240px;
   background-image: url('https://github.com/nestordemeure/nersc_markdown_slides/raw/main/style/images/LBNL-logo-horizontal.png');
   background-size: contain;
   background-repeat: no-repeat;
