--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -287,6 +287,7 @@ section.question h1 {
   color: var(--color-dark-gray);
   width: 100%;
   text-align: center;
+  line-height: 1.1;
 }
 
 section.question p {
