--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -135,6 +135,16 @@ section h1 {
   margin: 0;
 }
 
+/* Vertical centering for default slide titles */
+section:not(.title):not(.section-title):not(.question):not(.thanks) h1 {
+  top: 0;
+  height: 144px; /* Match the header height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 1.2; /* Adjust line-height for multi-line titles */
+}
+
 section::before {
   content: "";
   position: absolute;
