--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -279,6 +279,7 @@ section.section-title h1 {
   font-size: 48px;
   color: var(--color-orange);
   margin: 0;
+  line-height: 1.1;
 }
 
 section.section-title h2 {
@@ -286,6 +287,7 @@ section.section-title h2 {
   font-weight: normal;
   color: var(--color-white);
   margin: 10px 0 0 0;
+  line-height: 1.1;
 }
 
 
