--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -56,9 +56,14 @@ section::after {
 }
 
 /* General element styling - only override what's necessary */
+p {
+  margin: 0.5em 0;
+}
+
 ul {
   list-style: none;
   padding-left: 0;
+  margin: 0.5em 0;
 }
 
 ul li {
