--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -361,11 +361,11 @@ section.section-title h2 {
 section.question {
   background: var(--color-white);
   padding: 60px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 
 section.question::before,
@@ -373,27 +373,29 @@ section.question::after {
   display: none;
 }
 
+/* Question is centered vertically and horizontally */
 section.question h1 {
   position: static;
   font-size: 72px;
   color: var(--color-dark-gray);
-  width: 100%;
   text-align: center;
   line-height: 1.1;
-  margin: 0;
+  margin: 0 0 40px 0;
 }
 
-/* Add extra space after h1 when followed by other elements */
-section.question h1:not(:last-child) {
-  margin-bottom: 30px;
-}
-
+section.question h2,
 section.question p,
 section.question ul,
 section.question ol {
   font-size: 32px;
-  margin-top: 40px;
   text-align: center;
+  margin: 0;
+}
+
+/* Make h2 slightly larger for questions */
+section.question h2 {
+  font-size: 36px;
+  font-weight: normal;
 }
 
 
