fixed added space between list of different types

--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -66,6 +66,15 @@ ul {
   margin: 0.5em 0;
 }
 
+/* Remove margin between consecutive ul elements (for mixed marker lists) */
+ul:has(+ ul) {
+  margin-bottom: 0;
+}
+
+ul + ul {
+  margin-top: 0;
+}
+
 ul li {
   position: relative;
   padding-left: 30px;
