con bullets are now pure red

--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -28,7 +28,7 @@
   --color-light-gray: #595959;
   --color-white: #FFFFFF;
   --color-green: #4CAF50;
-  --color-red: #F44336;
+  --color-red: #FF0000;
 }
 
 /* Base styles for all slides */
